[project]
name = "metrics-core"
version = "0.1.0"
description = "Shared image and diffusion metrics"
requires-python = ">=3.10"
dependencies = ["torch>=2.0.0", "torchvision>=0.15.0", "torchmetrics"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
